Changed web title when sharing link on mobile. Made diss graph slightly bigger on mobile. Fixed the Java tooltip. Edited the diss bullet points

--- a/src/components/Technologies/Technologies.css
+++ b/src/components/Technologies/Technologies.css
@@ -57,22 +57,50 @@
   .icon-item:active::after {
     opacity: 1;
   }
-  
-  .java-logo {
-    width: 120px !important;
-    height: 120px !important;
-    color: grey;
+
+  /* Hacky solution to make java tooltip place correctly*/
+  .icon-java svg {
+    width: 120px;
+    height: 120px;
     position: relative;
     right: 20%;
-    transition: transform 0.3s, fill 0.3s;
+    color: grey;
+    transition: transform 0.3s, color 0.3s;
   }
   
-  .java-logo:hover {
+  .icon-java svg:hover {
     transform: scale(1.2);
     color: white;
   }
 
+  .icon-java::after {
+    content: attr(data-tooltip);
+    position: relative;
+    bottom: -12px;
+    background: #33cc33;
+    color: white;
+    padding: 3px 6px;
+    border-radius: 3px;
+    font-size: 1.2em;
+    white-space: nowrap;
+    opacity: 0;
+    transition: opacity 0.3s;
+    pointer-events: none;
+    z-index: 10; 
+  }
+  
+  .icon-java:hover::after,
+  .icon-java:focus::after,
+  .icon-java:active::after {
+    opacity: 1;
+  }
+
   @media (max-width: 768px) {
+
+    .technologies-title {
+      font-size: 1.3em;
+    }
+
     .technologies-container {
       flex-direction: column;
       align-items: center;
